--- a/macOS/Nudge/Configs/PRODUCTION-Config.json
+++ b/macOS/Nudge/Configs/PRODUCTION-Config.json
@@ -17,7 +17,7 @@
   },
   "osVersionRequirements": [
     {
-      "requiredInstallationDate": "2022-06-17T12:00:00Z",
+      "requiredInstallationDate": "2022-06-23T00:00:00-05:00",
       "requiredMinimumOSVersion": "12.4",
       "targetedOSVersionsRule": "default"
     }
@@ -28,14 +28,15 @@
     "gracePeriodLaunchDelay": 1,
     "gracePeriodPath": "/private/var/db/.AppleSetupDone",
     "allowUserQuitDeferrals": true,
-    "allowedDeferrals": 5,
-    "elapsedRefreshCycle": 300,
-    "initialRefreshCycle": 18000,
+    "allowedDeferrals": 15,
+    "allowedDeferralsUntilForcedSecondaryQuitButton": 5,
+    "elapsedRefreshCycle": 60,
+    "initialRefreshCycle": 9000,
     "nudgeRefreshCycle": 60,
     "randomDelay": false,
-    "approachingWindowTime": 72,
-    "approachingRefreshCycle": 6000,
-    "imminentWindowTime": 24,
+    "approachingWindowTime": 96,
+    "approachingRefreshCycle": 3600,
+    "imminentWindowTime": 48,
     "imminentRefreshCycle": 600
   },
   "userInterface": {
@@ -45,7 +46,9 @@
         "mainHeader": "Your MacBook requires a security update",
         "subHeader": "A friendly reminder from Balto's IT team",
         "mainContentHeader": "Your device will restart during this update",
-        "mainContentSubHeader": "Updates can take around 30-45 minutes to complete"
+        "mainContentSubHeader": "Updates can take around 30-45 minutes to complete",
+        "mainContentNote": "Important Notes",
+        "mainContentText": "A fully up-to-date macOS is required to ensure that Balto IT can your accurately protect and support your Mac, so it can continue to provide you with the best user experience possible every day.\n\nThis update must be installed on your Mac prior to Thursday June 23, 2022. If you do not update your Mac prior to the installation deadline, you may lose access to applications necessary for your day-to-day tasks until it is installed.\n\nTo begin the install now, simply click the blue \“Install Update Now\” button above and follow the provided steps. To schedule a reminder to install later, click \“I Understand\” or \"Schedule Reminder\" below."
       }
     ]
   }
