--- a/macOS/Nudge/Configs/PRODUCTION-Config.json
+++ b/macOS/Nudge/Configs/PRODUCTION-Config.json
@@ -8,7 +8,7 @@
     "acceptableAssertionUsage": true,
     "acceptableCameraUsage": true,
     "acceptableScreenSharingUsage": true,
-    "attemptToBlockApplicationLaunches": false,
+    "attemptToBlockApplicationLaunches": true,
     "blockedApplicationBundleIDs": [
       "com.microsoft.VSCode",
       "com.tinyspeck.slackmacgap",
@@ -39,7 +39,7 @@
     "gracePeriodPath": "/private/var/db/.AppleSetupDone",
     "allowUserQuitDeferrals": true,
     "allowedDeferrals": 15,
-    "allowedDeferralsUntilForcedSecondaryQuitButton": 5,
+    "allowedDeferralsUntilForcedSecondaryQuitButton": 10,
     "elapsedRefreshCycle": 60,
     "initialRefreshCycle": 9000,
     "nudgeRefreshCycle": 60,
@@ -58,10 +58,10 @@
         "mainContentHeader": "Your device will restart during this update",
         "mainContentSubHeader": "Updates can take around 30-45 minutes to complete",
         "mainContentNote": "Important Notes",
-        "mainContentText": "A fully up-to-date macOS is required to ensure that Balto IT can accurately protect and support your Mac, so your device can continue to provide you with the best user experience possible every day.\\n\\nThis update must be installed on your Mac prior to Tuesday, September 6th at 5:00pm CT. If you do not update your Mac prior to the installation deadline, you may lose access to applications necessary for your day-to-day tasks until it is installed.\\n\\nTo begin the install now, simply click the blue \"Install Update Now\" button above and follow the provided steps. To schedule a reminder to install later, click \"I Understand\" or \"Schedule Reminder\" below.",
+        "mainContentText": "A fully up-to-date macOS is required to ensure that Balto IT can accurately protect and support your Mac, so your device can continue to provide you with the best user experience possible every day.\\n\\nThis update must be installed on your Mac prior to Tuesday, September 6th at 5:00pm CT. If you do not update your Mac prior to the installation deadline, you will lose access to applications necessary for your day-to-day tasks until it is installed.\\n\\nTo begin the install now, simply click the \"Install Update Now\" button above and follow the provided steps. To schedule a reminder to install later, click \"I Understand\" or \"Defer\" below.",
         "actionButtonText": "Install Update Now",
         "customDeferralButtonText": "Select a Date and Time",
-        "customDeferralDropdownText": "Schedule Reminder",
+        "customDeferralDropdownText": "Defer",
         "primaryQuitButtonText": "Later",
         "secondaryQuitButtonText": "I Understand",
         "oneHourDeferralButtonText": "One Hour",
