--- a/macOS/Nudge/Configs/PRODUCTION-Config.json
+++ b/macOS/Nudge/Configs/PRODUCTION-Config.json
@@ -27,7 +27,7 @@
   },
   "osVersionRequirements": [
     {
-      "requiredInstallationDate": "2024-08-01T23:30:00Z",
+      "requiredInstallationDate": "2024-08-08T23:30:00Z",
       "requiredMinimumOSVersion": "14.5",
       "targetedOSVersionsRule": "default"
     }
@@ -58,7 +58,7 @@
         "mainContentHeader": "Your device will restart during this update",
         "mainContentSubHeader": "Updates can take around 40-60 minutes to complete",
         "mainContentNote": "Important Notes",
-        "mainContentText": "A fully up-to-date macOS is required to ensure that Balto IT can accurately protect and support your Mac, so your device can continue to provide you with the best user experience possible every day.\\n\\nThis update must be installed on your Mac prior to Thursday, August 1st at 5:00pm CT. If you do not update your Mac prior to the installation deadline, you will lose access to applications necessary for your day-to-day tasks until it is installed.\\n\\nTo begin the install now, simply click the \"Install Update Now\" button above and follow the provided steps. To schedule a reminder to install later, click \"I Understand\" or \"Defer\" below.",
+        "mainContentText": "A fully up-to-date macOS is required to ensure that Balto IT can accurately protect and support your Mac, so your device can continue to provide you with the best user experience possible every day.\\n\\nThis update must be installed on your Mac prior to August 8th at 5:00pm CT. If you do not update your Mac prior to the installation deadline, you will lose access to applications necessary for your day-to-day tasks until it is installed.\\n\\nTo begin the install now, simply click the \"Install Update Now\" button above and follow the provided steps. To schedule a reminder to install later, click \"I Understand\" or \"Defer\" below.",
         "actionButtonText": "Install Update Now",
         "customDeferralButtonText": "Select a Date and Time",
         "customDeferralDropdownText": "Defer",
